[project]
name = "DL_project"
version = "0.0.1"

dependencies = [
    "torch",
    "datasets",
    "librosa",
    "av",
    "transformers",
    "numpy",
    "matplotlib",
    "pandas",
    "ipdb",
    "ruff",
    "seaborn",
    "tqdm",
    "scikit-learn",
    "jupyterlab",
    "ipywidgets"
]

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://download.pytorch.org/whl/cu126"

[tool.setuptools.packages.find]
namespaces = false
